fixed z-index for onboarding

--- a/src/styles/plan/plan.css
+++ b/src/styles/plan/plan.css
@@ -7,7 +7,7 @@
   position: fixed;
   top: 70px;
   width: calc(100% - 240px);
-  z-index: 9;
+  z-index: 8;
 }
 
 @media (max-width: 1440px) {
